# gcp-role-permissions-diff

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
gcp_role_permissions_diff/: __init__.py  cli.py  grammar.py  log.py  role.py
tests/: __init__.py  test_gcp_role_permissions_diff.py  test_grammar.py  test_role.py
