[project]
name = "gcp-role-permissions-diff"
version = "0.1.1"
description = "Compare the permissions of multiple roles in Google Cloud"
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["gcp_role_permissions_diff"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
dependencies = [
    "lark==1.3.0",
    "pyyaml==6.0.3",
]

[project.urls]
repository = "https://github.com/berquerant/gcp-role-permissions-diff"

[project.scripts]
gcp_role_permissions_diff = "gcp_role_permissions_diff.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "setuptools",
    "pytest",
    "black",
    "tox",
    "mypy",
    "ruff",
    "types-pyyaml",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.ruff]
exclude = [
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".mypy_cache",
  ".pytype",
  ".ruff_cache",
  ".tox",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  ".ropeproject",
  ".pytest_cache",
  "__pycache__",
  ".coverage",
]
line-length = 120

[tool.ruff.lint]
select = [
  "F", # pyflakes
  "I", # isort
  "E", # pycodestyle
  "D", # pydocstyle
  "W", # pycodestyle
]
ignore = [
  "D100",  # Missing docstring in public module
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D107",  # Missing docstring in __init__
  "D203",  # 1 blank line required before class docstring
  "D212",  # Multi-line docstring summary should start at the first line
  "I001",  # Import block is un-sorted or un-formatted
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401",  # Module imported but unused
]
"**/{tests,doc}/*" = ["D"]

[tool.mypy]
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
pretty = true

[tool.black]
line-length = 120
